﻿2007-07-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/window.cpp: Fixed resizing windows by their resize grip.

2007-07-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/player.cpp, src/player.h, src/localplayer.h, src/being.h: Changed
	signatures to prevent the wrong members to be overloaded on
	architectures with 64-bit integers and to shut some compiler warnings.
	* src/localplayer.cpp: Fixed some uninitialized variables.

2007-07-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp, src/gui/chatinput.h, src/gui/chatinput.cpp,
	INSTALL: Ported to Guichan 0.7.0. Unfortunately, since Guichan 0.6.x
	didn't have a FocusListener, compatibility with older versions is
	broken.

2007-06-30  Philipp Sehmisch  <tmw@crushnet.org>

	* src/main.cpp: Changed include order to avoid a problem with guichan
	on windows.
	* src/net/beinghandler.cpp: Implemented getting the direction of 
	attacks from the server.

2007-06-29  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/particleemitter.cpp: Corrected some perspective
	issues of the particle engine and fixed a crash caused by particles
	with child emitters that have an image than isn't used elsewhere.
	* data/maps/new-3-1.tmx.gz: Added a particle effect at the spawn point 
	in Tulimshar.

2007-06-21  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml, data/graphics/sprites/monster-logmonster.png, 
	data/graphics/sprites/monster-logmonster.xml: Added logmonster by
	Enigmatik (Monster ID is 23).
	* data/items.xml, data/equipment.xml,
	data/graphics/items/armor-chest-lightplatemail.png,
	data/graphics/sprites/chest-lightplatemail-male.xml,
	data/graphics/sprites/chest-lightplatemail-male.png,
	data/graphics/sprites/chest-lightplatemail-female.png,
	data/graphics/sprites/chest-lightplatemail-female.xml:
	Added light platemail (see entry in items.xml for proposed specs).

2007-06-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
